tests/snapshots/integration__integration_tests__init__init_elvish.snap
---
source: tests/integration_tests/init.rs
info:
  program: wt
  args:
    - init
    - elvish
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: false
exit_code: 1
----- stdout -----
# worktrunk shell integration for elvish

# Only initialize if wt is available
if (has-external wt) {
    # Helper function to parse wt output and handle directives
    fn _wt_exec {|@args|
        var exit-code = 0
        var output = ""

        # Capture output and handle potential non-zero exit
        try {
            set output = (e:wt $@args 2>&1 | slurp)
        } catch e {
            set exit-code = 1
            set output = $e[reason][content]
        }

        # Parse output line by line
        var lines = [(str:split "\n" $output)]
        for line $lines {
            if (str:has-prefix $line "__WORKTRUNK_CD__") {
                # Extract path and change directory
                var path = (str:trim-prefix $line "__WORKTRUNK_CD__")
                cd $path
            } else {
                # Regular output - print it
                echo $line
            }
        }

        # Return exit code (will throw exception if non-zero)
        if (!=s $exit-code 0) {
            fail "command failed with exit code "$exit-code
        }
    }

    # Override wt command to add --internal flag for switch, remove, and merge
    fn wt {|@args|
        if (== (count $args) 0) {
            e:wt
            return
        }

        var subcommand = $args[0]

        if (or (eq $subcommand "switch") (eq $subcommand "remove") (eq $subcommand "merge")) {
            # Commands that need --internal for directory change support
            var rest-args = $args[1..]
            _wt_exec $subcommand --internal $@rest-args
        } else {
            # All other commands pass through directly
            e:wt $@args
        }
    }
}

# Static completions (commands and flags)

----- stderr -----
❌ [31mCompletion not yet supported for elvish[0m
