tests/snapshots/integration__integration_tests__init__init_nushell.snap
---
source: tests/integration_tests/init.rs
info:
  program: wt
  args:
    - init
    - nushell
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: false
exit_code: 1
----- stdout -----
# worktrunk shell integration for nushell

# Only initialize if wt is available
if (which wt | is-not-empty) {
    # Helper function to parse wt output and handle directives
    export def --env _wt_exec [...args] {
        let result = (do { ^wt ...$args } | complete)

        # Parse output line by line
        let lines = ($result.stdout | lines)
        for line in $lines {
            if ($line | str starts-with "__WORKTRUNK_CD__") {
                # Extract path and change directory
                let path = ($line | str substring 16..)
                cd $path
            } else {
                # Regular output - print it
                print $line
            }
        }

        # Return the exit code
        return $result.exit_code
    }

    # Override wt command to add --internal flag for switch, remove, and merge
    # Use --wrapped to pass through all flags without parsing them
    export def --env --wrapped wt [...rest] {
        let subcommand = ($rest | get 0? | default "")

        match $subcommand {
            "switch" | "remove" | "merge" => {
                # Commands that need --internal for directory change support
                let rest_args = ($rest | skip 1)
                let internal_args = ([$subcommand, "--internal"] | append $rest_args)
                let exit_code = (_wt_exec ...$internal_args)
                return $exit_code
            }
            _ => {
                # All other commands pass through directly
                ^wt ...$rest
            }
        }
    }
}

# Static completions (commands and flags)

----- stderr -----
❌ [31mCompletion not yet supported for nushell[0m
